{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 28,
  "lineage": "d88ad3e7-a400-76c9-c1b7-d4be72c24fa5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0533f2ba8a1995cf9",
            "arn": "arn:aws:ec2:us-east-1:530959042370:instance/i-0595333feee089039",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0595333feee089039",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a017153301e80423",
            "private_dns": "ip-10-0-1-28.ec2.internal",
            "private_ip": "10.0.1.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0441334e9d5eea60a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e0831eee6c4f166",
            "tags": {
              "Name": "server_name"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-017e1141f5c256e60"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet",
            "aws_vpc.mainVPC",
            "data.aws_ami.am_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mainVPC_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530959042370:internet-gateway/igw-080f84a88b3528095",
            "id": "igw-080f84a88b3528095",
            "owner_id": "530959042370",
            "vpc_id": "vpc-0c85292f90c2f00c2"
          },
          "dependencies": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017c029c97fdb2cdd",
            "owner_id": "530959042370",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080f84a88b3528095",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c85292f90c2f00c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mainVPC_gateway",
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03171e2e14262a9d0",
            "route_table_id": "rtb-017c029c97fdb2cdd",
            "subnet_id": "subnet-09e0831eee6c4f166"
          },
          "dependencies": [
            "aws_internet_gateway.mainVPC_gateway",
            "aws_route_table.publicRT",
            "aws_subnet.web_subnet",
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530959042370:security-group/sg-017e1141f5c256e60",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017e1141f5c256e60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "530959042370",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c85292f90c2f00c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530959042370:subnet/subnet-09e0831eee6c4f166",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09e0831eee6c4f166",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "530959042370",
            "tags": {
              "Name": "sn-app-az1"
            },
            "tags_all": {
              "Name": "sn-app-az1"
            },
            "vpc_id": "vpc-0c85292f90c2f00c2"
          },
          "dependencies": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530959042370:vpc/vpc-0c85292f90c2f00c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dd879b83773e063",
            "default_route_table_id": "rtb-0c6b3502ec46a753e",
            "default_security_group_id": "sg-020288f3b3f9389e0",
            "dhcp_options_id": "dopt-dae4b2a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c85292f90c2f00c2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c6b3502ec46a753e",
            "owner_id": "530959042370",
            "tags": {
              "Name": "mainVPC"
            },
            "tags_all": {
              "Name": "mainVPC"
            }
          }
        }
      ]
    }
  ]
}